@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.7.12) unstable; urgency=low
 
   * http-cache: unlock the cache item after successful revalidation
   * http-cache-memcached: pass the expiration time to memcached
+  * sink-header: comprise pending data in method available()
 
  --
 
